# src/swagger.json
@@ -14,6 +14,10 @@
     {
       "name": "Doctors",
       "description": "Gerenciamento de Doutores"
+    },
+    {
+      "name": "Clients",
+      "description": "Gerenciamento de Clientes"
     }
   ],
   "paths": {
@@ -31,9 +35,16 @@
                 "properties": {
                   "name": { "type": "string", "example": "Dr. John Doe" },
                   "phone": { "type": "string", "example": "+5565981233996" },
-                  "email": { "type": "string", "example": "john.doe@example.com" },
+                  "email": {
+                    "type": "string",
+                    "example": "john.doe@example.com"
+                  },
                   "cpf": { "type": "string", "example": "12345678909" },
-                  "birthday": { "type": "string", "format": "date", "example": "1980-01-01" },
+                  "birthday": {
+                    "type": "string",
+                    "format": "date",
+                    "example": "1980-01-01"
+                  },
                   "password": { "type": "string", "example": "securepassword" },
                   "CRM": { "type": "string", "example": "123456789" },
                   "specialty": { "type": "string", "example": "Cardiology" }
@@ -63,9 +74,16 @@
                     "id": { "type": "string", "example": "1" },
                     "name": { "type": "string", "example": "Dr. John Doe" },
                     "phone": { "type": "string", "example": "+5565981233996" },
-                    "email": { "type": "string", "example": "john.doe@example.com" },
+                    "email": {
+                      "type": "string",
+                      "example": "john.doe@example.com"
+                    },
                     "cpf": { "type": "string", "example": "12345678909" },
-                    "birthday": { "type": "string", "format": "date", "example": "1980-01-01" },
+                    "birthday": {
+                      "type": "string",
+                      "format": "date",
+                      "example": "1980-01-01"
+                    },
                     "CRM": { "type": "string", "example": "123456789" },
                     "specialty": { "type": "string", "example": "Cardiology" }
                   }
@@ -115,9 +133,16 @@
                 "properties": {
                   "name": { "type": "string", "example": "Dr. John Doe" },
                   "phone": { "type": "string", "example": "+5565981233996" },
-                  "email": { "type": "string", "example": "john.doe@example.com" },
+                  "email": {
+                    "type": "string",
+                    "example": "john.doe@example.com"
+                  },
                   "cpf": { "type": "string", "example": "12345678909" },
-                  "birthday": { "type": "string", "format": "date", "example": "1980-01-01" },
+                  "birthday": {
+                    "type": "string",
+                    "format": "date",
+                    "example": "1980-01-01"
+                  },
                   "password": { "type": "string", "example": "securepassword" },
                   "CRM": { "type": "string", "example": "123456789" },
                   "specialty": { "type": "string", "example": "Cardiology" }
@@ -147,9 +172,16 @@
                     "id": { "type": "integer", "example": 1 },
                     "name": { "type": "string", "example": "Dr. John Doe" },
                     "phone": { "type": "string", "example": "+5565981233996" },
-                    "email": { "type": "string", "example": "john.doe@example.com" },
+                    "email": {
+                      "type": "string",
+                      "example": "john.doe@example.com"
+                    },
                     "cpf": { "type": "string", "example": "12345678909" },
-                    "birthday": { "type": "string", "format": "date", "example": "1980-01-01" },
+                    "birthday": {
+                      "type": "string",
+                      "format": "date",
+                      "example": "1980-01-01"
+                    },
                     "CRM": { "type": "string", "example": "123456789" },
                     "specialty": { "type": "string", "example": "Cardiology" }
                   }
@@ -164,7 +196,10 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "error": { "type": "string", "example": "Doutor não encontrado" }
+                    "error": {
+                      "type": "string",
+                      "example": "Doutor não encontrado"
+                    }
                   }
                 }
               }
@@ -199,7 +234,10 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "error": { "type": "string", "example": "Doutor não encontrado" }
+                    "error": {
+                      "type": "string",
+                      "example": "Doutor não encontrado"
+                    }
                   }
                 }
               }
@@ -236,9 +274,16 @@
                     "id": { "type": "integer", "example": 1 },
                     "name": { "type": "string", "example": "Dr. John Doe" },
                     "phone": { "type": "string", "example": "+5565981233996" },
-                    "email": { "type": "string", "example": "john.doe@example.com" },
+                    "email": {
+                      "type": "string",
+                      "example": "john.doe@example.com"
+                    },
                     "cpf": { "type": "string", "example": "12345678909" },
-                    "birthday": { "type": "string", "format": "date", "example": "1980-01-01" },
+                    "birthday": {
+                      "type": "string",
+                      "format": "date",
+                      "example": "1980-01-01"
+                    },
                     "CRM": { "type": "string", "example": "123456789" },
                     "specialty": { "type": "string", "example": "Cardiology" }
                   }
@@ -253,7 +298,299 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "error": { "type": "string", "example": "Doutor não encontrado" }
+                    "error": {
+                      "type": "string",
+                      "example": "Doutor não encontrado"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/clients": {
+      "post": {
+        "tags": ["Clients"],
+        "summary": "Criar um novo doutor",
+        "operationId": "createClient",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": { "type": "string", "example": "Dr. John Doe" },
+                  "phone": { "type": "string", "example": "+5565981233996" },
+                  "email": {
+                    "type": "string",
+                    "example": "john.doe@example.com"
+                  },
+                  "cpf": { "type": "string", "example": "12345678909" },
+                  "birthday": {
+                    "type": "string",
+                    "format": "date",
+                    "example": "1980-01-01"
+                  },
+                  "password": { "type": "string", "example": "securepassword" },
+                  "CRM": { "type": "string", "example": "123456789" },
+                  "specialty": { "type": "string", "example": "Cardiology" }
+                },
+                "required": [
+                  "name",
+                  "phone",
+                  "email",
+                  "cpf",
+                  "birthday",
+                  "password",
+                  "CRM",
+                  "specialty"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Doutor criado com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": { "type": "string", "example": "1" },
+                    "name": { "type": "string", "example": "Dr. John Doe" },
+                    "phone": { "type": "string", "example": "+5565981233996" },
+                    "email": {
+                      "type": "string",
+                      "example": "john.doe@example.com"
+                    },
+                    "cpf": { "type": "string", "example": "12345678909" },
+                    "birthday": {
+                      "type": "string",
+                      "format": "date",
+                      "example": "1980-01-01"
+                    },
+                    "CRM": { "type": "string", "example": "123456789" },
+                    "specialty": { "type": "string", "example": "Cardiology" }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Input Invalido",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": { "type": "string", "example": "Doutor já existe" }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/clients/{id}": {
+      "put": {
+        "tags": ["Clients"],
+        "summary": "Atualizar um cliente existente",
+        "operationId": "updateClient",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "ID do cliente a ser atualizado",
+            "schema": {
+              "type": "integer",
+              "example": 1
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": { "type": "string", "example": "Dr. John Doe" },
+                  "phone": { "type": "string", "example": "+5565981233996" },
+                  "email": {
+                    "type": "string",
+                    "example": "john.doe@example.com"
+                  },
+                  "cpf": { "type": "string", "example": "12345678909" },
+                  "birthday": {
+                    "type": "string",
+                    "format": "date",
+                    "example": "1980-01-01"
+                  },
+                  "password": { "type": "string", "example": "securepassword" },
+                  "CRM": { "type": "string", "example": "123456789" },
+                  "specialty": { "type": "string", "example": "Cardiology" }
+                },
+                "required": [
+                  "name",
+                  "phone",
+                  "email",
+                  "cpf",
+                  "birthday",
+                  "password",
+                  "CRM",
+                  "specialty"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Cliente atualizado com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": { "type": "integer", "example": 1 },
+                    "name": { "type": "string", "example": "Dr. John Doe" },
+                    "phone": { "type": "string", "example": "+5565981233996" },
+                    "email": {
+                      "type": "string",
+                      "example": "john.doe@example.com"
+                    },
+                    "cpf": { "type": "string", "example": "12345678909" },
+                    "birthday": {
+                      "type": "string",
+                      "format": "date",
+                      "example": "1980-01-01"
+                    },
+                    "CRM": { "type": "string", "example": "123456789" },
+                    "specialty": { "type": "string", "example": "Cardiology" }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Input Invalido",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Cliente não encontrado"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Clients"],
+        "summary": "Deletar um cliente existente",
+        "operationId": "deleteClient",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "ID do cliente a ser deletado",
+            "schema": {
+              "type": "integer",
+              "example": 1
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Cliente deletado com sucesso"
+          },
+          "404": {
+            "description": "Cliente não encontrado",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Cliente não encontrado"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/clients/profile/{client_id}": {
+      "get": {
+        "tags": ["Clients"],
+        "summary": "Mostrar o perfil de um cliente",
+        "operationId": "showClientProfile",
+        "parameters": [
+          {
+            "name": "client_id",
+            "in": "path",
+            "required": true,
+            "description": "ID do cliente",
+            "schema": {
+              "type": "integer",
+              "example": 1
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Perfil do cliente encontrado com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": { "type": "integer", "example": 1 },
+                    "name": { "type": "string", "example": "Dr. John Doe" },
+                    "phone": { "type": "string", "example": "+5565981233996" },
+                    "email": {
+                      "type": "string",
+                      "example": "john.doe@example.com"
+                    },
+                    "cpf": { "type": "string", "example": "12345678909" },
+                    "birthday": {
+                      "type": "string",
+                      "format": "date",
+                      "example": "1980-01-01"
+                    },
+                    "CRM": { "type": "string", "example": "123456789" },
+                    "specialty": { "type": "string", "example": "Cardiology" }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Cliente não encontrado",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Cliente não encontrado"
+                    }
                   }
                 }
               }
